--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
         <div class="l_side">
             <div class="profile_text">
                 <div class="profile_img">
-                    <img src="img/na.jpg" alt="naeem">
+                    <img src="na.jpg" alt="naeem">
                 </div>
                 <h2>Naeem Islam<br><span>Web Developer</span>
                 </h2>
