--- a/cv.html
+++ b/cv.html
@@ -146,15 +146,15 @@
                         <h3>ABC</h3>
                         <p> Lecturer <br>
                             Department of Computer Science Engineering<br>
-                            <a target="_blank" href="o@bubt.edu.bd">Email: sshanto@bubt.edu.bd</a>
+                            <a target="_blank" href="o@bubt.edu.bd">Email: S@bubt.edu.bd</a>
                         </p>
 
                     </li>
                     <li>
-                        <h3>xxx</h3>
+                        <h3>XYZ</h3>
                         <p> Lecturer <br>
                             Department of Computer Science Engineering<br>
-                            <a target="_blank" href="o@bubt.edu.bd">Email: sshanto@bubt.edu.bd</a>
+                            <a target="_blank" href="o@bubt.edu.bd">Email: a@bubt.edu.bd</a>
                         </p>
                     </li>
                 </ul>
